--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lucide-react": "^0.563.0",
     "nanoid": "^5.0.9",
     "next": "16.1.6",
+    "promptparse": "^1.5.0",
+    "qrcode.react": "^4.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwindcss": "^4.0.5",
