--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-lotto-smartsheet",
-  "version": "2.0.0-beta",
+  "version": "2.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.3",
+    "@upstash/redis": "^1.36.1",
+    "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.20",
     "daisyui": "^5.0.0-beta.6",
     "html-to-image": "^1.11.11",
